// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileInfo
    accessToken="foo"
    actions={
        Object {
            "activateEditCustomerField": [Function],
            "addLineItems": [Function],
            "cancelEditCustomerFields": [Function],
            "checkoutCustomerDisassociate": [Function],
            "signOutCustomer": [Function],
            "updateCustomer": [Function],
          }
    }
    customerFieldBeingEdited={
        Array [
            Object {
              "foo": "foo",
            },
          ]
    }
    email="foo"
    errors="foo"
    phone="foo"
    successfullyEditedFields="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="carter sub-title mb3"
>
          Personal Info
</h2>,
        <FormFlash
          className="my3"
          error={false}
          message="Your 0 has been updated to: f"
          success={true}
/>,
        <FormFlash
          className="my3"
          error={true}
          message="Unexpected Error: foo"
          success={false}
/>,
        <div
          className="card card--light-gray-border p3 my2"
>
          <div
                    className="relative"
          >
                    <strong
                              className="bold block mb2"
                    >
                              Email Address
                    </strong>
                    <p>
                              foo
                    </p>
                    <Button
                              className="text-peach absolute t0 r0"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              label="Edit"
                              onClick={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="no-style"
                    />
          </div>
</div>,
        <div
          className="card card--light-gray-border p3 my2"
>
          <div
                    className="relative"
          >
                    <strong
                              className="bold block mb2"
                    >
                              Phone Number
                    </strong>
                    <p>
                              foo
                    </p>
                    <Button
                              className="text-peach absolute t0 r0"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              label="Edit"
                              onClick={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="no-style"
                    />
          </div>
</div>,
        <div
          className="card card--light-gray-border p3 my2"
>
          <div
                    className="relative"
          >
                    <strong
                              className="bold block mb2"
                    >
                              Password
                    </strong>
                    <p>
                              • • • • • • • • • •
                    </p>
                    <Button
                              className="text-peach absolute t0 r0"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              label="Edit"
                              onClick={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="no-style"
                    />
          </div>
</div>,
        null,
      ],
      "className": "my3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Personal Info",
          "className": "carter sub-title mb3",
        },
        "ref": null,
        "rendered": "Personal Info",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "my3",
          "error": false,
          "message": "Your 0 has been updated to: f",
          "success": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "my3",
          "error": true,
          "message": "Unexpected Error: foo",
          "success": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="relative"
>
            <strong
                        className="bold block mb2"
            >
                        Email Address
            </strong>
            <p>
                        foo
            </p>
            <Button
                        className="text-peach absolute t0 r0"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        label="Edit"
                        onClick={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="no-style"
            />
</div>,
          "className": "card card--light-gray-border p3 my2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2"
>
                Email Address
</strong>,
              <p>
                foo
</p>,
              <Button
                className="text-peach absolute t0 r0"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                label="Edit"
                onClick={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="no-style"
/>,
            ],
            "className": "relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Email Address",
                "className": "bold block mb2",
              },
              "ref": null,
              "rendered": "Email Address",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
              },
              "ref": null,
              "rendered": "foo",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "text-peach absolute t0 r0",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "label": "Edit",
                "onClick": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "no-style",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="relative"
>
            <strong
                        className="bold block mb2"
            >
                        Phone Number
            </strong>
            <p>
                        foo
            </p>
            <Button
                        className="text-peach absolute t0 r0"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        label="Edit"
                        onClick={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="no-style"
            />
</div>,
          "className": "card card--light-gray-border p3 my2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2"
>
                Phone Number
</strong>,
              <p>
                foo
</p>,
              <Button
                className="text-peach absolute t0 r0"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                label="Edit"
                onClick={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="no-style"
/>,
            ],
            "className": "relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Phone Number",
                "className": "bold block mb2",
              },
              "ref": null,
              "rendered": "Phone Number",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
              },
              "ref": null,
              "rendered": "foo",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "text-peach absolute t0 r0",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "label": "Edit",
                "onClick": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "no-style",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="relative"
>
            <strong
                        className="bold block mb2"
            >
                        Password
            </strong>
            <p>
                        • • • • • • • • • •
            </p>
            <Button
                        className="text-peach absolute t0 r0"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        label="Edit"
                        onClick={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="no-style"
            />
</div>,
          "className": "card card--light-gray-border p3 my2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2"
>
                Password
</strong>,
              <p>
                • • • • • • • • • •
</p>,
              <Button
                className="text-peach absolute t0 r0"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                label="Edit"
                onClick={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="no-style"
/>,
            ],
            "className": "relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Password",
                "className": "bold block mb2",
              },
              "ref": null,
              "rendered": "Password",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "• • • • • • • • • •",
              },
              "ref": null,
              "rendered": "• • • • • • • • • •",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "text-peach absolute t0 r0",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "label": "Edit",
                "onClick": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "no-style",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="carter sub-title mb3"
>
            Personal Info
</h2>,
          <FormFlash
            className="my3"
            error={false}
            message="Your 0 has been updated to: f"
            success={true}
/>,
          <FormFlash
            className="my3"
            error={true}
            message="Unexpected Error: foo"
            success={false}
/>,
          <div
            className="card card--light-gray-border p3 my2"
>
            <div
                        className="relative"
            >
                        <strong
                                    className="bold block mb2"
                        >
                                    Email Address
                        </strong>
                        <p>
                                    foo
                        </p>
                        <Button
                                    className="text-peach absolute t0 r0"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    label="Edit"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="no-style"
                        />
            </div>
</div>,
          <div
            className="card card--light-gray-border p3 my2"
>
            <div
                        className="relative"
            >
                        <strong
                                    className="bold block mb2"
                        >
                                    Phone Number
                        </strong>
                        <p>
                                    foo
                        </p>
                        <Button
                                    className="text-peach absolute t0 r0"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    label="Edit"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="no-style"
                        />
            </div>
</div>,
          <div
            className="card card--light-gray-border p3 my2"
>
            <div
                        className="relative"
            >
                        <strong
                                    className="bold block mb2"
                        >
                                    Password
                        </strong>
                        <p>
                                    • • • • • • • • • •
                        </p>
                        <Button
                                    className="text-peach absolute t0 r0"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    label="Edit"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="no-style"
                        />
            </div>
</div>,
          null,
        ],
        "className": "my3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Personal Info",
            "className": "carter sub-title mb3",
          },
          "ref": null,
          "rendered": "Personal Info",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "my3",
            "error": false,
            "message": "Your 0 has been updated to: f",
            "success": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "my3",
            "error": true,
            "message": "Unexpected Error: foo",
            "success": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="relative"
>
              <strong
                            className="bold block mb2"
              >
                            Email Address
              </strong>
              <p>
                            foo
              </p>
              <Button
                            className="text-peach absolute t0 r0"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            label="Edit"
                            onClick={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="no-style"
              />
</div>,
            "className": "card card--light-gray-border p3 my2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2"
>
                  Email Address
</strong>,
                <p>
                  foo
</p>,
                <Button
                  className="text-peach absolute t0 r0"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  label="Edit"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="no-style"
/>,
              ],
              "className": "relative",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Email Address",
                  "className": "bold block mb2",
                },
                "ref": null,
                "rendered": "Email Address",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                },
                "ref": null,
                "rendered": "foo",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "text-peach absolute t0 r0",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "label": "Edit",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "no-style",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="relative"
>
              <strong
                            className="bold block mb2"
              >
                            Phone Number
              </strong>
              <p>
                            foo
              </p>
              <Button
                            className="text-peach absolute t0 r0"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            label="Edit"
                            onClick={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="no-style"
              />
</div>,
            "className": "card card--light-gray-border p3 my2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2"
>
                  Phone Number
</strong>,
                <p>
                  foo
</p>,
                <Button
                  className="text-peach absolute t0 r0"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  label="Edit"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="no-style"
/>,
              ],
              "className": "relative",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Phone Number",
                  "className": "bold block mb2",
                },
                "ref": null,
                "rendered": "Phone Number",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                },
                "ref": null,
                "rendered": "foo",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "text-peach absolute t0 r0",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "label": "Edit",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "no-style",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="relative"
>
              <strong
                            className="bold block mb2"
              >
                            Password
              </strong>
              <p>
                            • • • • • • • • • •
              </p>
              <Button
                            className="text-peach absolute t0 r0"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            label="Edit"
                            onClick={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="no-style"
              />
</div>,
            "className": "card card--light-gray-border p3 my2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2"
>
                  Password
</strong>,
                <p>
                  • • • • • • • • • •
</p>,
                <Button
                  className="text-peach absolute t0 r0"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  label="Edit"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="no-style"
/>,
              ],
              "className": "relative",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Password",
                  "className": "bold block mb2",
                },
                "ref": null,
                "rendered": "Password",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "• • • • • • • • • •",
                },
                "ref": null,
                "rendered": "• • • • • • • • • •",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "text-peach absolute t0 r0",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "label": "Edit",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "no-style",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileInfo
    actions={
        Object {
            "editCustomerEmail": [Function],
            "editCustomerPassword": [Function],
            "editCustomerPhone": [Function],
          }
    }
    customerFieldBeingEdited=""
    email=""
    phone=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="carter sub-title mb3"
>
          Personal Info
</h2>,
        null,
        null,
        <div
          className="card card--light-gray-border p3 my2"
>
          <div
                    className="relative"
          >
                    <strong
                              className="bold block mb2"
                    >
                              Email Address
                    </strong>
                    <p />
                    <Button
                              className="text-peach absolute t0 r0"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              label="Edit"
                              onClick={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="no-style"
                    />
          </div>
</div>,
        null,
        <div
          className="card card--light-gray-border p3 my2"
>
          <div
                    className="relative"
          >
                    <strong
                              className="bold block mb2"
                    >
                              Password
                    </strong>
                    <p>
                              • • • • • • • • • •
                    </p>
                    <Button
                              className="text-peach absolute t0 r0"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              label="Edit"
                              onClick={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="no-style"
                    />
          </div>
</div>,
        null,
      ],
      "className": "my3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Personal Info",
          "className": "carter sub-title mb3",
        },
        "ref": null,
        "rendered": "Personal Info",
        "type": "h2",
      },
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="relative"
>
            <strong
                        className="bold block mb2"
            >
                        Email Address
            </strong>
            <p />
            <Button
                        className="text-peach absolute t0 r0"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        label="Edit"
                        onClick={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="no-style"
            />
</div>,
          "className": "card card--light-gray-border p3 my2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2"
>
                Email Address
</strong>,
              <p />,
              <Button
                className="text-peach absolute t0 r0"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                label="Edit"
                onClick={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="no-style"
/>,
            ],
            "className": "relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Email Address",
                "className": "bold block mb2",
              },
              "ref": null,
              "rendered": "Email Address",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
              },
              "ref": null,
              "rendered": "",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "text-peach absolute t0 r0",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "label": "Edit",
                "onClick": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "no-style",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="relative"
>
            <strong
                        className="bold block mb2"
            >
                        Password
            </strong>
            <p>
                        • • • • • • • • • •
            </p>
            <Button
                        className="text-peach absolute t0 r0"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        label="Edit"
                        onClick={[Function]}
                        shadow={false}
                        to=""
                        type="button"
                        variant="no-style"
            />
</div>,
          "className": "card card--light-gray-border p3 my2",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong
                className="bold block mb2"
>
                Password
</strong>,
              <p>
                • • • • • • • • • •
</p>,
              <Button
                className="text-peach absolute t0 r0"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                label="Edit"
                onClick={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="no-style"
/>,
            ],
            "className": "relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Password",
                "className": "bold block mb2",
              },
              "ref": null,
              "rendered": "Password",
              "type": "strong",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "• • • • • • • • • •",
              },
              "ref": null,
              "rendered": "• • • • • • • • • •",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "text-peach absolute t0 r0",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "label": "Edit",
                "onClick": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "no-style",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="carter sub-title mb3"
>
            Personal Info
</h2>,
          null,
          null,
          <div
            className="card card--light-gray-border p3 my2"
>
            <div
                        className="relative"
            >
                        <strong
                                    className="bold block mb2"
                        >
                                    Email Address
                        </strong>
                        <p />
                        <Button
                                    className="text-peach absolute t0 r0"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    label="Edit"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="no-style"
                        />
            </div>
</div>,
          null,
          <div
            className="card card--light-gray-border p3 my2"
>
            <div
                        className="relative"
            >
                        <strong
                                    className="bold block mb2"
                        >
                                    Password
                        </strong>
                        <p>
                                    • • • • • • • • • •
                        </p>
                        <Button
                                    className="text-peach absolute t0 r0"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    label="Edit"
                                    onClick={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="no-style"
                        />
            </div>
</div>,
          null,
        ],
        "className": "my3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Personal Info",
            "className": "carter sub-title mb3",
          },
          "ref": null,
          "rendered": "Personal Info",
          "type": "h2",
        },
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="relative"
>
              <strong
                            className="bold block mb2"
              >
                            Email Address
              </strong>
              <p />
              <Button
                            className="text-peach absolute t0 r0"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            label="Edit"
                            onClick={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="no-style"
              />
</div>,
            "className": "card card--light-gray-border p3 my2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2"
>
                  Email Address
</strong>,
                <p />,
                <Button
                  className="text-peach absolute t0 r0"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  label="Edit"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="no-style"
/>,
              ],
              "className": "relative",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Email Address",
                  "className": "bold block mb2",
                },
                "ref": null,
                "rendered": "Email Address",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                },
                "ref": null,
                "rendered": "",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "text-peach absolute t0 r0",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "label": "Edit",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "no-style",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="relative"
>
              <strong
                            className="bold block mb2"
              >
                            Password
              </strong>
              <p>
                            • • • • • • • • • •
              </p>
              <Button
                            className="text-peach absolute t0 r0"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            label="Edit"
                            onClick={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="no-style"
              />
</div>,
            "className": "card card--light-gray-border p3 my2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong
                  className="bold block mb2"
>
                  Password
</strong>,
                <p>
                  • • • • • • • • • •
</p>,
                <Button
                  className="text-peach absolute t0 r0"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  label="Edit"
                  onClick={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="no-style"
/>,
              ],
              "className": "relative",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Password",
                  "className": "bold block mb2",
                },
                "ref": null,
                "rendered": "Password",
                "type": "strong",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "• • • • • • • • • •",
                },
                "ref": null,
                "rendered": "• • • • • • • • • •",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "text-peach absolute t0 r0",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "label": "Edit",
                  "onClick": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "no-style",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
